@@ -2,10 +2,10 @@ package game.entity.item;
 
 import java.awt.image.BufferedImage;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.EnumMap;
 import java.util.Map;
 import java.util.UUID;
-
 import javax.imageio.ImageIO;
 
 import game.entity.Player;
@@ -19,31 +19,41 @@ public class EquipmentItem extends Item {
     private final BufferedImage icon;
     /** Unique identifier for this equipment. */
     private final String id;
-    /** Stat bonuses provided by this equipment. */
+    /** Stat bonuses granted while equipped. */
     private final EnumMap<Attr, Integer> bonuses = new EnumMap<>(Attr.class);
 
     /**
      * Create equipment with an auto-generated unique id.
      */
     public EquipmentItem(String name, String desc, String iconPath, EquipType type) {
-        this(type.name() + "#" + UUID.randomUUID().toString(), name, desc, iconPath, type, Map.of());
+        this(type.name() + "#" + UUID.randomUUID().toString(), name, desc, iconPath, type, new EnumMap<>(Attr.class));
+    }
+
+    /**
+     * Create equipment with an auto-generated id and bonuses.
+     */
+    public EquipmentItem(String name, String desc, String iconPath, EquipType type, EnumMap<Attr, Integer> bonusMap) {
+        this(type.name() + "#" + UUID.randomUUID().toString(), name, desc, iconPath, type, bonusMap);
     }
 
     /**
      * Create equipment with a specified id.
      */
     public EquipmentItem(String id, String name, String desc, String iconPath, EquipType type) {
-        this(id, name, desc, iconPath, type, Map.of());
+        this(id, name, desc, iconPath, type, new EnumMap<>(Attr.class));
     }
 
     /**
-     * Full constructor including stat bonuses.
+     * Full constructor allowing stat bonuses to be supplied.
      */
-    public EquipmentItem(String id, String name, String desc, String iconPath, EquipType type, Map<Attr, Integer> bonusMap) {
-        super(id, name, desc, 1, 1);
+    public EquipmentItem(String id, String name, String desc, String iconPath, EquipType type, EnumMap<Attr, Integer> bonusMap) {
+        super(name, desc, 1, 1);
         this.type = type;
         this.iconPath = iconPath;
         this.id = id;
+        if (bonusMap != null) {
+            bonuses.putAll(bonusMap);
+        }
         BufferedImage img = null;
         if (iconPath != null) {
             try {
@@ -53,7 +63,6 @@ public class EquipmentItem extends Item {
             }
         }
         this.icon = img;
-        this.bonuses.putAll(bonusMap);
     }
 
     public EquipType getType() {
@@ -68,19 +77,11 @@ public class EquipmentItem extends Item {
         return iconPath;
     }
 
-    /**
-     * @return immutable view of bonuses provided by this equipment.
-     */
-    public Map<Attr, Integer> getBonuses() {
-        return Map.copyOf(bonuses);
-    }
+    /** @return immutable view of the stat bonuses. */
+    public Map<Attr, Integer> getBonuses() { return Collections.unmodifiableMap(bonuses); }
 
-    /**
-     * Add or override a bonus value.
-     */
-    public void setBonus(Attr attr, int value) {
-        bonuses.put(attr, value);
-    }
+    /** Add a stat bonus to this item. */
+    public void addBonus(Attr attr, int value) { bonuses.put(attr, value); }
 
     @Override
     public void use(Player p) {
@@ -93,8 +94,8 @@ public class EquipmentItem extends Item {
 
     @Override
     public Item copyWithQuantity(int qty) {
-        // Equipment is non-stackable; return identical copy preserving bonuses.
-        return new EquipmentItem(id, getName(), getDecription(), iconPath, type, bonuses);
+        // Equipment is non-stackable; return identical copy with same bonuses.
+        return new EquipmentItem(getId(), getName(), getDecription(), iconPath, type, new EnumMap<>(bonuses));
     }
 
     @Override
@@ -116,3 +117,4 @@ public class EquipmentItem extends Item {
         }
     }
 }
+
